--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -37,6 +37,7 @@
   font-weight: 750;
   font-style: normal;
   font-variation-settings: "wdth" 75;
+  padding-left: 4.5rem;
 }
 
 .pathway_extreme_header_info h2 {
