--- a/src/Pages/KeynoteSpeakers.module.css
+++ b/src/Pages/KeynoteSpeakers.module.css
@@ -33,12 +33,13 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
+    
   }
   
   .profileImage img {
     width: 350px; /* Set a fixed width */
     height: 350px; /* Set a fixed height */
-    object-fit: cover; /* Ensures the image fits well within the dimensions */
+    object-fit: fill; /* Ensures the image fits well within the dimensions */
     border-radius: 15px; /* Optional: Rounded corners */
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Subtle shadow for better visuals */
   }
