--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,9 +1,7 @@
 .navbar {
   display: flex;
   flex-direction: column;
-
   background-color: #379337;
-
   font-family: Arial, sans-serif;
   font-size: 14px;
 
@@ -24,13 +22,11 @@
   }
 
   .navItems {
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
+    padding: 0.7rem 0;
     display: flex;
     justify-content: center;
     list-style-type: none;
-    padding-left: 0;
-    margin-top: 0;
+    margin: 0;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
     color: #f9f9f9;
 
@@ -41,31 +37,45 @@
     .navItem {
       padding: 10px 20px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, border-radius 0.3s;
+      border-radius: 8px;
       &:hover {
-        background-color: #79b9eb;
+        background-color: #0f8b18;
+        border-radius: 12px;
+        font-weight: 700;
       }
     }
 
     .dropdown {
       position: relative;
+
       &:hover .dropdownContent {
         display: block;
-        z-index: 10000;
+        z-index: 1000;
       }
+
       .dropdownContent {
         display: none;
         position: absolute;
-        color: rgb(0, 0, 0);
-        background-color: #f9f9f9;
+        top: 100%;
+        left: 0;
+        background-color: #ffffff;
         min-width: 200px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1000;
+        border-radius: 10px;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        overflow: hidden; /* Ensure content fits inside the rounded edges */
+        animation: fadeIn 0.3s ease-in-out;
+
         li {
           padding: 12px 16px;
           display: block;
+          color: #333;
+          cursor: pointer;
+          transition: background-color 0.3s;
+          font-weight: 300;
           &:hover {
-            background-color: #f1f1f1;
+            background-color: #d2d2d2;
+            
           }
         }
       }
@@ -90,11 +100,13 @@
       .navItem {
         text-align: center;
         padding: 15px;
+        border-radius: 0; /* No curve in mobile view */
       }
       .dropdownContent {
         z-index: 10000;
         position: relative;
         box-shadow: none;
+        border-radius: 0; /* Flatten edges for mobile */
         li {
           padding: 15px;
         }
@@ -106,6 +118,18 @@
     .navItems {
       flex-wrap: nowrap; /* Ensure no wrapping after 980px */
       font-size: 0.875rem; /* Smaller text size for larger screens (14px) */
+    }
+  }
+
+  /* Fade-in animation for dropdown */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
     }
   }
 }
