--- a/src/Pages/Accomodation.module.scss
+++ b/src/Pages/Accomodation.module.scss
@@ -36,7 +36,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.2rem;
     line-height: 2rem;
-    padding-left: 4rem;
+    padding-left: 1rem;
     
     list-style-type: disc;
 
@@ -95,6 +95,7 @@ h3{
 }
 
 .submissionTemplate button {
+  pointer-events: auto;
   align-items: center;
   appearance: none;
   
@@ -135,6 +136,10 @@ h3{
 @media (min-width: 768px) {
   .submissionTemplate button {
     padding: 1rem 1.6rem;
+  }
+
+  .submissionGuidelinesTextHead{
+    padding-left: 2rem;
   }
 }
 
@@ -185,10 +190,10 @@ h3{
 
 .submissionTemplate button:active:not(:disabled):after {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
-  bottom: 4px;
-  left: 4px;
-  right: 4px;
-  top: 4px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  top: 10px;
 }
 
 .submitButton{
@@ -224,4 +229,15 @@ h3{
     justify-content: center;
     align-items: center;
     padding: 1rem 2rem;
+}
+
+@media(max-width: 768px){
+  .submissionTemplate{
+    display: flex;
+    justify-content: center;
+    padding-right: 3rem;
+  }
+  .submissionTemplate button{
+    padding:1rem 1rem;
+  }
 }
