--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -85,8 +85,9 @@
   @media (max-width: 980px) {
     .topBar {
       .hamburger {
-        display: block;
+        display: flex;
         z-index: 10000;
+        padding-left: 0.7rem;
       }
       .logos, .rightLogos {
         display: none;
