--- a/src/Components/Sponsors/Sponsors.module.scss
+++ b/src/Components/Sponsors/Sponsors.module.scss
@@ -49,6 +49,12 @@
                     }
 
                 }
+                @media (max-width: 768px) {
+                    .logo1{
+                        padding-top: 2rem;
+                    }
+
+                }
     }
 }
 .FinancialSponsors{
@@ -71,7 +77,12 @@
         padding-top: 3%; 
         .logo1{
             padding-top: 0.3rem;
-        }     
+        } 
+        @media (max-width: 768px) {
+            .logo1{
+                padding-top: 2rem;
+            }
+        }    
     }
 
     @media (max-width: 1000px) {
@@ -80,4 +91,5 @@
             padding: 2em;
         }
     }
+    
 }
