added new schedule,changed logo

--- a/src/Pages/ProgramDetails.module.css
+++ b/src/Pages/ProgramDetails.module.css
@@ -11,3 +11,18 @@
 .header span {
     color: orange;
 }
+
+.schedule{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left:0vw;
+    margin-bottom: 2rem;
+    img{
+        object-fit:contain;
+        /* min-height: 100%; */
+        max-width: 50vw;
+    }
+}
