--- a/src/Pages/Travel.module.scss
+++ b/src/Pages/Travel.module.scss
@@ -17,6 +17,13 @@
         padding: 0% 10% 3% 10%;
     }
 }
+.helpsec{
+  text-align: center;
+  padding: 1%;
+  font-weight: bolder;
+  color: #05006c;
+  font-size: large;
+}
 h1 {
     color: #2c3e50;
     text-align: center;
