--- a/src/Pages/Awards/Awards.module.scss
+++ b/src/Pages/Awards/Awards.module.scss
@@ -13,7 +13,6 @@
 }
 
 .studentAwardSection {
-    // padding-top: 1rem;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -22,26 +21,26 @@
     
     img {
         object-fit: contain;
-        width: 100%;  // Ensures full width for mobile
-        max-width: 80vw; // Caps width on larger screens
+        width: 100%;
+        max-width: 80vw;
         height: auto; 
     }
 
     @media (max-width: 768px) {
         img {
-            max-width: 90vw; // Makes the flyer more visible on small screens
+            max-width: 90vw;
         }
     }
 }
 
 .text-center {
     text-align: center;
-    padding: 0 5%; // Adds spacing on smaller screens
+    padding: 0 5%;
 }
 
 button {
     width: 100%;
-    max-width: 200px; // Keeps the button a reasonable size
+    max-width: 200px;
     text-align: center;
 }
 
@@ -108,54 +107,34 @@ button {
     text-justify:distribute;
 }
 
-
-
 @media screen and (max-width: 400px) {
-    .anekTamilAboutUs {
-        font-family: "Anek Tamil", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 900;
-        font-style: normal;
-        font-variation-settings: "wdth" 97;
-        color: blue;
-        font-size: 1.3rem;
-        padding-top: 3%;
-        padding-left: 1%;
-        padding-right: 1%;
-        text-align: center;
-    
-        h2 span {
-            color: orange;
-        }
-    }
+  .anekTamilAboutUs {
+    font-size: 1.2rem;
+    padding: 0 1rem;
+    text-align: center;
 
-    .aboutUsInfo p span {
-        font-weight: bold;
-        font-size: .9rem;
-    }
-    
-    .anekTamilAboutUsPara {
-        font-family: "Anek Tamil", sans-serif;
-        font-optical-sizing: auto;
-        font-weight: 400;
-        font-style: normal;
-        text-align: start;
-        font-variation-settings: "wdth" 97;
-        font-size: .8rem;
-        color: rgb(53, 49, 49);
-        padding-left: 1%;
-        padding-right: 1%;
-        padding:0 .5rem .5rem .5rem;
+    h2 span {
+      color: orange;
     }
   }
-  
-  .submissionGuidelinesText{
+
+  .aboutUsInfo p span {
+    font-size: 0.9rem;
+  }
+
+  .anekTamilAboutUsPara {
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    text-align: start;
+  }
+}
+
+.submissionGuidelinesText{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.2rem;
     line-height: 2rem;
     padding-left: 4rem; 
     text-align: justify;
-    
     list-style-type: disc;
 
     @keyframes blink {
@@ -166,9 +145,8 @@ button {
 
   .blink {
       animation: blink 2s infinite;
-      color: red; /* You can change the color if you want */
+      color: red;
   }
-
 }
 
 .boldText{
@@ -182,6 +160,7 @@ button {
 .aboutUsInfo{
     text-align: justify;
 }
+
 .instructionsHeading{
     color: blue;
     text-align: start;
@@ -191,6 +170,7 @@ button {
     font-size: 2rem;
     font-weight: 700;
 }
+
 .instructionsHeading span{
     color: orange;
 }
@@ -223,4 +203,61 @@ button {
 
 .nearFooterText p{
     font-style: italic;
+}
+@media screen and (max-width: 500px) {
+  .anekTamilAboutUs {
+    font-size: 1.4rem;
+    padding: 0 1rem;
+  }
+
+  .anekTamilAboutUs h2 {
+    line-height: 1.5;
+    word-break: break-word;
+  }
+
+  .instructionsHeading,
+  .lowerText,
+  .nearFooterText {
+    font-size: 1rem;
+    padding: 0 1rem;
+  }
+
+  .submissionGuidelinesText {
+    font-size: 1rem;
+    padding-left: 1rem;
+  }
+
+  .anekTamilAboutUsPara {
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .studentAwardSection img {
+    max-width: 95vw;
+  }
+}
+@media screen and (max-width: 499px) {
+  .anekTamilAboutUs,
+  .anekTamilAboutUsPara,
+  .submissionGuidelinesText,
+  .aboutUsInfo,
+  .lowerText,
+  .nearFooterText,
+  .instructionsHeading,
+  .eligibility {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
+
+  .submissionGuidelinesText {
+    padding-left: 1.2rem !important;
+  }
+
+  .anekTamilAboutUsPara {
+    font-size: 0.9rem;
+  }
+
+  .submissionGuidelinesText {
+    font-size: 1rem;
+  }
 }
